# BNS_Assistant

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  ruff.toml
.github/workflows/: ci.yml
app/api/: main.py
app/core/: config.py  logging.py
app/db/: __init__.py  models.py  session.py
app/ingestion/: pipeline.py
app/llm/: __init__.py  router.py
app/retrieval/: __init__.py  hybrid.py
app/schemas/: __init__.py
frontend/: app.py
frontend/.streamlit/: secrets.toml.example
scripts/: ingest.py
tests/: eval_suite.py  test_core.py
