[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bns-legal-rag"
version = "1.0.0"
description = "AI-powered legal query platform for Bharatiya Nyaya Sanhita 2023"
requires-python = ">=3.11"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "slowapi>=0.1.9",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.9",
    
    # Database
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    
    # Vector Store
    "chromadb>=0.5.0",
    
    # Embeddings & Reranking
    "sentence-transformers>=3.0.0",
    
    # LLM
    "groq>=0.9.0",
    "google-generativeai>=0.7.0",
    
    # PDF Processing
    "PyMuPDF>=1.24.0",
    
    # LangChain (minimal)
    "langchain-text-splitters>=0.2.0",
    
    # Utils
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "ragas>=0.1.10",
]
frontend = [
    "streamlit>=1.36.0",
]
[tool.setuptools.packages.find]
include = ["app*"]